# SLAM-SpaceMapper

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
img_src/: picrobot2.heic  slampic1.heic
include/: backend.h  common.h  frontend.h  loopclose.h  map.h  viewer.h
include/slam/: backend.h  common.h  frontend.h  map.h
src/: CMakeLists.txt  backend.cpp  frontend.cpp  loopclose.cpp  map.cpp  orb.cpp  viewer.cpp
src/frontend/depth/: triangulation.cpp
src/frontend/epipolar/: CMakeLists.txt  epipolar.cpp
src/frontend/feature/: CMakeLists.txt
src/orb/: CMakeLists.txt
src/server/: send.py
test/G2O/: CMakeLists.txt  g2o.cpp
test/backend/: BA.cpp
test/eigen/: CMakeLists.txt  eigentest.cpp
test/frontend/: test.cpp
test/frontend/depth/: CMakeLists.txt  triangulation.cpp
test/frontend/epipolar/: epipolar.cpp
test/frontend/feature/: frontend.cpp
test/image/: get_image.py
test/loop_closure/: dictionary_gen.cpp  loop_closure.cpp
test/orb/: orb.cpp
test/pangolintest/: CMakeLists.txt  visualizeGeometry.cpp
test/reconstruction/: reconstruction.cpp
